# python-playground

./: asterisk.py  custom_enum.py  dataclass.py  dataclass_mod.py  dict_unpack.py  enums.py  global_var.py  if-con.py  json_lib.py  list_comprehension.py  private_attr.py  property.py  pyproject.toml  stdin_demo.py  walrus.py  yield.py
_aiohttp/: example.py
_e2b/: __init__.py
_opencv/: __init__.py
_pytorch/: __init__.py
base/: bitwise-or.py  iter_unpack.py  json_lib.py  stdin_demo.py
case_async_gather/: demo.py
case_async_no_await/: demo.py
case_await_sync_function/: demo.py
case_basic_coroutine/: demo.py
case_call_as_function/: demo.py
case_child_class_invoke_parent/: demo.py
case_cls_init/: __init__.py
case_coroutine_thead_pool_executor/: demo.py
case_decorator_with_extra_args/: demo.py
case_decorator_with_extra_fnc_args/: demo.py
case_decorators_providers/: __init__.py  demo.py  utils.py
case_dict_pop/: demo.py
case_extensible_modules/: base.py  demo.py
case_get_set_item/: demo.py
case_grpc_hello_world/: client.py  greeter.proto  greeter_pb2.py  greeter_pb2_grpc.py  server.py
case_import_order/: __init__.py  demo.py
case_list_comprehension_empty/: demo.py
case_new_function/: demo.py
case_pdb/: demo.py
case_return_coroutine/: demo.py
case_shallow_deep_copy/: demo.py
case_side_effect_return_value/: demo.py
case_str_repr_function/: demo.py
case_thread_and_coroutine/: __init__.py
case_trim_list/: demo.py
case_ttl_cache_maxsize/: demo.py
case_type_literal/: demo.py
case_yield/: demo.py
decorators/: demo.py
(+47 files in other folders)
