[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Pao-Sheng Wang <paooap.oappao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
