[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Pao-Sheng Wang <paooap.oappao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
tqdm = "^4.66.4"
pytest = "^8.2.0"
sf-hamilton = {extras = ["visualization"], version = "^1.62.0"}
graphviz = "^0.20.3"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
